fix: remove scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 *:after,
 *:before {
   box-sizing: border-box;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 body {
@@ -23,7 +28,7 @@ h1 {
 
 ul {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   gap: 40px;
   padding: 0;
